arquivo nodo separado

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<meta charset="utf-8">
-	<title></title
-></head>
+	<title>Snake Game</title
+>
+</head>
 <body>
 	<canvas id="tela" width="640" height="480">Navegador não suportado!</canvas><br>
 
 	<button id="btPausa" onclick="pausa()" type="button">Iniciar</button>
 	<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
 
-
-	<script src="script.js">	</script>
+	<script src="nodo.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
