Interacao, Som e Comer Fruta

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 	<button id="btPausa" onclick="pausa()" type="button">Iniciar</button>
 	<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
 
+	<audio controls id= "comer1">
+		<source src= "Resources/cp.mp_" type="audio/mpeg">
+		<source src= "Resources/cp.ogg" type="audio/ogg">
+	</audio>
+	<audio controls id= "comer2">
+		<source src= "Resources/br.mp_" type="audio/mpeg">
+		<source src= "Resources/br.ogg" type="audio/ogg">
+	</audio>
+	<audio controls id="gameover">
+		<source src= "Resources/ha.mp_" type="audio/mpeg">
+		<source src= "Resources/ha.ogg" type="audio/ogg">
+	</audio>
+
 	<script src="nodo.js"></script>
 	<script src="script.js"></script>
 </body>
