--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
 
 	<audio controls id= "comer1">
-		<source src= "Resources/cp.mp_" type="audio/mpeg">
+		<source src= "Resources/cp.mp3" type="audio/mpeg">
 		<source src= "Resources/cp.ogg" type="audio/ogg">
 	</audio>
 	<audio controls id= "comer2">
-		<source src= "Resources/br.mp_" type="audio/mpeg">
+		<source src= "Resources/br.mp3" type="audio/mpeg">
 		<source src= "Resources/br.ogg" type="audio/ogg">
 	</audio>
 	<audio controls id="gameover">
-		<source src= "Resources/ha.mp_" type="audio/mpeg">
-		<source src= "Resources/ha.ogg" type="audio/ogg">
+		<source src= "Resources/boring_1.mp3" type="audio/mpeg">
+		<source src= "Resources/boring_1.ogg" type="audio/ogg">
 	</audio>
 
 	<script src="nodo.js"></script>
