--- a/index.html
+++ b/index.html
@@ -7,10 +7,47 @@
 >
 </head>
 <body>
-	<canvas id="tela" width="640" height="480">Navegador não suportado!</canvas><br>
+	<div id="panel">
+		<h1>IFSP - Campus São Carlos</h1><br>
+		<h3> Desenvolvimento para Web 1</h3>
+		<div id="tablePanel">
+			<table>
+				<div>
+					<tr>
+						<th>Alunos</th>
+						<th> R.A</th>
+					</tr>
+				</div>
+				<tr>
+					<td>MATEUS FELIPE INOCENTINI</td>
+					<td>1602128</td>
+				</tr>
+				<tr>
+					<td>RUI DONIZETE DE MATTOS OLIVEIRA JUNIOR</td>
+					<td>120324X</td>
+				</tr>
+				<tr>
+					<td>ANA PAULA JULIO DE LIMA</td>
+					<td>1602152</td>
+				</tr>
+				<tr>
+					<td>ANA PAULA DE OLIVEIRA</td>
+					<td>1502972</td>
+				</tr>
+				<tr>
+					<td>KALEO APARECIDO PIASSE</td>
+					<td>1500686</td>
+				</tr>
+				</tr>
+			</table>
+		</div>
+		<canvas id="tela" width="640" height="480">Navegador não suportado!</canvas><br>
 
-	<button id="btPausa" onclick="pausa()" type="button">Iniciar</button>
-	<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
+		<button id="btPausa" onclick="pausa()" type="button">Iniciar</button>
+		<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
+	</div>
+
+	
 
 	<audio controls id= "comer1">
 		<source src= "Resources/cp.mp3" type="audio/mpeg">
