Main music implements

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 		<source src= "Resources/boring_1.mp3" type="audio/mpeg">
 		<source src= "Resources/boring_1.ogg" type="audio/ogg">
 	</audio>
+	<audio controls id="main">
+		<source src="Resources/wake_me_up_8bits.mp3" type="audio/mpeg">
+		<source src="Resources/wake_me_up_8bits.ogg" type="audio/ogg">
+	</audio>
 
 	<script src="nodo.js"></script>
 	<script src="script.js"></script>
