bg tela transparente

--- a/index.html
+++ b/index.html
@@ -8,39 +8,8 @@
 </head>
 <body>
 	<div id="panel">
-		<h1>IFSP - Campus São Carlos</h1><br>
+		<h1>IFSP - Campus São Carlos</h1>
 		<h3> Desenvolvimento para Web 1</h3>
-		<div id="tablePanel">
-			<table>
-				<div>
-					<tr>
-						<th>Alunos</th>
-						<th> R.A</th>
-					</tr>
-				</div>
-				<tr>
-					<td>MATEUS FELIPE INOCENTINI</td>
-					<td>1602128</td>
-				</tr>
-				<tr>
-					<td>RUI DONIZETE DE MATTOS OLIVEIRA JUNIOR</td>
-					<td>120324X</td>
-				</tr>
-				<tr>
-					<td>ANA PAULA JULIO DE LIMA</td>
-					<td>1602152</td>
-				</tr>
-				<tr>
-					<td>ANA PAULA DE OLIVEIRA</td>
-					<td>1502972</td>
-				</tr>
-				<tr>
-					<td>KALEO APARECIDO PIASSE</td>
-					<td>1500686</td>
-				</tr>
-				</tr>
-			</table>
-		</div>
 		<canvas id="tela" width="640" height="480">Navegador não suportado!</canvas><br>
 		<form action="">
 			<label for="velocidade">Speed
@@ -53,7 +22,6 @@
 			<button id="btNovo" onclick="novoJogo()" type="button">Novo Jogo</button>
 		</form>	
 	</div>
-
 	<audio controls id= "comer1">
 		<source src= "Resources/cp.mp3" type="audio/mpeg">
 		<source src= "Resources/cp.ogg" type="audio/ogg">
@@ -73,5 +41,8 @@
 
 	<script src="nodo.js"></script>
 	<script src="script.js"></script>
+	<div id="footer">
+		<p>MATEUS FELIPE INOCENTINI 1602128		RUI DONIZETE DE MATTOS OLIVEIRA JUNIOR	120324X		ANA PAULA JULIO DE LIMA	1602152		ANA PAULA DE OLIVEIRA	1502972		KALEO APARECIDO PIASSE	1500686</p>
+	</div>
 </body>
 </html>
