Fim de jogo exibindo

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 		<source src="Resources/wake_me_up_8bits.mp3" type="audio/mpeg">
 		<source src="Resources/wake_me_up_8bits.ogg" type="audio/ogg">
 	</audio>
+	<audio controls id="fimjogo">
+		<source src="Resources/flawless_victory.mp3" type="audio/mpeg">
+		<source src="Resources/flawless_victory.ogg" type="audio/ogg">
+
+	</audio>
 
 	<script src="nodo.js"></script>
 	<script src="script.js"></script>
