--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		<source src="Resources/wake_me_up_8bits.ogg" type="audio/ogg">
 	</audio>
 	<audio controls id="fimjogo">
-		<source src="Resources/flawless_victory.mp3" type="audio/mpeg">
-		<source src="Resources/flawless_victory.ogg" type="audio/ogg">
+		<source src="Resources/youwin.mp3" type="audio/mpeg">
+		<source src="Resources/youwin.ogg" type="audio/ogg">
 
 	</audio>
 
